# Dune-awakening-svr-linux-slackware

./: .gitignore  ARCHITECTURE.md  BACKUP-RESTORE.md  CLAUDE.md  FILE-LOCATIONS.md  FLS-CLAIM-REWARDS.md  INSTALLER-DESIGN.md  MULTI-WORLD.md  OFFSITE-BACKUP.md  PLANETOLOGIST-TRAINER-BUG.md  PUBLIC-IP.md  README.md  STATUS.md  WORLD-CAPSULES.md
.claude/: settings.local.json
dune-ctl/: Cargo.toml  OPERATIONS.md  SIETCHES-DESIGN.md  TUI-MASCOT.md
dune-ctl/core/: Cargo.toml
dune-ctl/core/src/: backup.rs  battlegroup.rs  capsules.rs  config.rs  diagnostics.rs  fls.rs  gateway.rs  health.rs  kubectl.rs  lib.rs  logs.rs  maintenance.rs  maps.rs  players.rs  public_ip.rs  settings.rs  sietches.rs  update.rs
dune-ctl/ctl/: Cargo.toml
dune-ctl/ctl/src/: main.rs
dune-ctl/ctl/src/cli/: mod.rs
dune-ctl/ctl/src/tui/: app.rs  events.rs  mod.rs  ui.rs
dune-ctl/ctl/src/web/: mod.rs
scripts/: db-credentials.sh  dune-backup.sh  funcom-patches.sh  gateway-patch.sh  map-toggle.sh  memory-focused-scheduler.sh  offsite-restore-drill.sh  offsite-sync.sh  port-preempt.py  resource-snapshot.sh  root-setup.sh  security-audit.sh  sudoer.sh  system-snapshot.sh  test-world-capsules.sh  update.sh  world-capsules.sh
scripts/funcom-patches/: experimental_swap.sh  experimental_swap.sh.upstream
scripts/vpa/: install.sh  recommender-deployment.yaml  recommender-rbac.yaml  vpa-objects.sh  watch-gameservers.sh
