[package]
name    = "dune-ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dune-ctl"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
dune-ctl-core = { path = "../core" }
anyhow     = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
chrono     = { workspace = true }
ratatui    = { workspace = true, optional = true }
crossterm  = { workspace = true, optional = true }
axum       = { workspace = true, optional = true }
tower      = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
